--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,101 +1,9 @@
 html {
     font-size: 16px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    width: 100%;
-    color: #494441bb;
+    color: rgb(32, 27, 27);
+    opacity: 90%;
 }
-
-#logo {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-}
-
-#logo p {
-    height: 2rem;
-    display: flex;
-    align-items: center;
-}
-
-div.container.one {
-    background-color: lightgray;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    width: 100%;
-    padding: 2rem 1.5rem;
-}
-
-div.container.one .left {
-    text-align: left;
-    display: flexbox;
-    flex-basis: width 60%;
-}
-
-div.container.one .right {
-    flex-basis: width 40%;
-    display: flexbox;
-    align-items: center;
-    padding-left: 1.5rem;
-    justify-content: flex-start;
-}
-
-div.container.two {
-    background-color: white;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    width: 100%;
-    padding: 2rem 1.5rem;
-}
-
-div.container.two .left {
-    text-align: left;
-    display: flexbox;
-    align-items: center;
-    justify-content: flex-start;
-    width: 60%;
-}
-
-div.container.two .right {
-    width: 40%;
-    display: flexbox;
-    align-items: center;
-    padding-left: 1.5rem;
-    justify-content: flex-start;
-}
-
-div.container.two .left .text {
-    padding: 2rem 0;
-    line-height: 1.5rem;
-    display: flexbox;
-}
-
-.start {
-    background-color: #494340d7;
-    padding: 0.5rem 4rem;
-    width: 50%;
-    color: white;
-    text-align: center;
-}
-
-.row {
-    height: auto;
-    width: 35%;
-    padding: 1rem;
-    display: flex;
-    align-content: center;
-}
-
-.guest {
-    background-color: lightgrey;
-    height: auto;
-    padding: 1rem;
-    display: flex;
-    align-content: center;
-    justify-content: space-between;
-}
-
 header {
     padding: 16px 24px;
     height: 4rem;
@@ -103,9 +11,19 @@ header {
     justify-content: space-between;
     text-align: justify;
     align-items: center;
-    width: 99%;
+    width: 100%;
 }
 
+#logo {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+#logo p {
+    height: 2rem;
+    display: flex;
+    align-items: center;
+}
 nav {
     display: flex;
     align-items: center;
@@ -126,15 +44,20 @@ nav ul li {
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    font-size: 1.75rem;
 }
 
 body {
     font-size: 16px;
-    width: 99%;
+    width: 100%;
 }
 
 h1 {
     font-size: 3rem;
+}
+
+h4 {
+    font-size: 2rem;
 }
 
 h5 {
@@ -148,4 +71,184 @@ h6 {
 
 p {
     font-size: 1.75rem;
+}
+
+div.container.one,
+div.container.two {
+    width: 100%;
+    display: inline-flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 2rem 1.5rem;
+}
+div.container.four {
+    padding: 2rem 1.5rem;
+}
+div.container.four .thesis {
+    width: 100%;
+    display: inline-flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding-top: 2rem;
+}
+div.container.one,
+div.container.three {
+    background-color: lightgrey;
+}
+div.container.two,
+div.container.four {
+    background-color: white;
+}
+
+div.container.one .left,
+div.container.two .left,
+div.container.four .thesis .left {
+    width: 60%;
+    height: auto;
+}
+div.container.one .left img[src*='banner'],
+div.container.two .left img[src*='information-main'] {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+div.container.four .left video {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
+div.container.two .left,
+div.container.four .thesis .left {
+    display: flexbox;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+
+div.container.one .right,
+div.container.two .right {
+    width: 40%;
+    height: auto;
+    display: flexbox;
+    align-items: center;
+    padding-left: 1.5rem;
+}
+div.container.four .thesis .right {
+    width: 40%;
+    height: auto;
+    display: flexbox;
+    align-items: center;
+    padding-left: 1.5rem;
+}
+
+div.container.two .left .text,
+div.container.four .thesis .left .text {
+    line-height: 1.5rem;
+    display: flexbox;
+}
+
+.start {
+    background-color: rgb(32, 27, 27);
+    padding: 0.5rem 4rem;
+    width: 50%;
+    color: white;
+    text-align: center;
+}
+
+.row,
+.guest,
+.fisma {
+    padding: 1rem;
+    display: flex;
+    align-content: center;
+    justify-content: flex-start;
+}
+
+div.container.two .right .guest,
+div.container.four .thesis .right .fisma {
+    background-color: lightgrey;
+}
+
+div.container.two .right .row .text,
+div.container.two .right .guest .text,
+div.container.four .thesis .right .fisma .text,
+div.container.four .thesis .right .row .text {
+    width: 65%;
+    height: auto;
+    display: flexbox;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 0.5rem;
+}
+div.container.two .right .row img[src*='information-orientation'],
+div.container.two .right .row img[src*='information-campus'],
+div.container.two .right .guest img[src*='information-guest-lecture'],
+div.container.four .thesis .right .fisma img[src*='thesis-fisma'],
+div.container.four .thesis .right .row img[src*='thesis-now-and-then'] {
+    width: 35%;
+    height: auto;
+    object-fit: cover;
+    display: flex;
+    align-items: center;
+    padding: 1rem;
+}
+
+div.container.three {
+    width: 100%;
+    align-items: center;
+    text-emphasis: center;
+    padding: 2rem 2.5rem 0 2.5rem;
+}
+
+div.container.three .courses {
+    padding: 2rem;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+div.container.three .courses .course {
+    background-color: white;
+    width: 25%;
+    padding-bottom: 1.5rem;
+    margin: 2rem;
+    height: 600px; 
+}
+
+div.container.three .courses .course img[src*='course-software'],
+div.container.three .courses .course img[src*='course-computer-art'],
+div.container.three .courses .course img[src*='course-design'],
+div.container.three .courses .course img[src*='course-data'],
+div.container.three .courses .course img[src*='course-business'],
+div.container.three .courses .course img[src*='course-marketing'] {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    padding-bottom: 0.5rem;
+}
+
+div.container.three .courses .course .description{
+    padding: 0.5rem 1rem 1.5rem 1rem;
+    overflow-wrap: normal;
+}
+
+div.container.three h1,
+div.container.four h1 {
+    text-align: center;
+}
+
+footer {
+    padding: 1rem 1.5rem;
+    font-size: 1rem;
+    display: flex;
+    justify-content: space-between;
+}
+.copy {
+    text-align: left;
+}
+.link {
+    display: flex;
+    justify-content: space-between;
+    text-align: right;
 }
